--- a/helper.html
+++ b/helper.html
@@ -4,7 +4,7 @@
   <title>Shortcuts</title>
   <style>
     body {
-      background: rgba(20, 20, 20, 0.75);
+      background: rgb(26, 26, 26);
       color: #f0f0f0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       text-align: left;
